<resources>
    <string name="app_name">Kings</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="premium">Premium</string>
    <string name="playerListTitle">Who is DRINKING?</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="start">Start</string>
    <string name="premium_plan">Premium Plan</string>
    <string name="standard_plan">Standard Plan</string>
    <string name="add_customs_missions">Add Customs Missions to do or drink</string>
    <string name="game_name">Game Name</string>
    <string name="player_name">Player Name</string>
    <string name="next">Next</string>
    <string name="ace">Ace: Waterfall - Every player begins drinking, and no one can stop until the player before them does</string>
    <string name="two">2: You - Whoever drew the card assigns a drink</string>
    <string name="three">3: Me - Whoever drew the card drinks</string>
    <string name="four">4: Floor - Everyone races to touch the floor, last person to do so drinks</string>
    <string name="five">5: Guys - All guys drink</string>
    <string name="six">6: Chicks - All girls drink</string>
    <string name="seven">7: Heaven - All players point towards the sky, last player to do so drinks</string>
    <string name="eight"> 8: Mate - Pick a person to drink with</string>
    <string name="nine">9: Rhyme - Say a phrase, and everyone else must say phrases that rhyme</string>
    <string name="ten">10: Categories - Pick a category, and say something from that category </string>
    <string name="jack">Jack: Never have I ever - Each player puts up 3 fingers, then starting with the person who drew the card, each player says never have I ever {something}. If you\'ve done it, you put a finger down, until someone loses</string>
    <string name="queen">Queen: Questions - The person who drew the card asks a random person a question, and they then turn and ask a random person a question, until someone loses by either failing to ask a question or by responding to the person who just asked them a question</string>
    <string name="king">King: Ruler - Make a rule that everyone must follow until the next King is drawn (i.e. force everyone to drink after each turn)</string>
    <string name="the_rules">Each turn, every player picks up one of the face down cards, and either drinks or gives drinks based on the action associated with said card.\nAt the end of the turn, the player puts the card underneath the beer can surrounded by face down cards, making sure not to open the can (which can be heard by air leaking out should it happen).\nIf the can is opened, that players drinks the beer, and a new one replaces it with no cards under the tab to start.\nThe game continues until all cards are drawn.\nOn every card there will be an explanation about the mission.\nHappy Drinking!</string> <!--\nBelow is a list of common card associations during Kings:\nAce: Waterfall - Every player begins drinking, and no one can stop until the player before them does\n2: You - Whoever drew the card assigns a drink\n3: Me - Whoever drew the card drinks\n4: Floor - Everyone races to touch the floor, last person to do so drinks\n5: Guys - All guys drink\n6: Chicks - All girls drink\n7: Heaven - All players point towards the sky, last player to do so drinks\n8: Mate - Pick a person to drink with\n9: Rhyme - Say a phrase, and everyone else must say phrases that rhyme\n10: Categories - Pick a category, and say something from that category \nJack: Never have I ever - Each player puts up 3 fingers, then starting with the person who drew the card, each player says \'never have I ever «something»\'. If you\'ve done it, you put a finger down, until someone loses\nQueen: Questions - The person who drew the card asks a random person a question, and they then turn and ask a random person a question, until someone loses by either failing to ask a question or by responding to the person who just asked them a question\nKing: Ruler - Make a rule that everyone must follow until the next King is drawn (i.e. force everyone to drink after each turn)\n</string> -->
    <string name="privacy_url">https://sites.google.com/view/kings-privacy-policy/%D7%91%D7%99%D7%AA</string>
    <string name="terms_url">https://sites.google.com/view/kings-terms/%D7%91%D7%99%D7%AA</string>
    <string name="describe_your_mission">Describe your Mission</string>
    <string name="super_duper_awesome_mission">Super Duper Awesome Mission!!!</string>
    <string name="add_mission">Add Mission</string>
    <string name="add_custom_mission">Add Custom Mission</string>
    <string name="delete_all_missions">Delete All Missions</string>
    <string name="store">Store</string>
    <string name="purchase">Purchase</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="removing_all_ads_from_the_application_for_lifetime">Removing all ads from the application for lifetime!</string>
    <string name="kings_with_a_twist">Kings with a Twist and You can add customs cards to your gameplay!</string>
    <string name="secret_mission_cards_included">Secret mission cards included!</string>
    <string name="add_custom_cards">Add custom cards</string>
    <string name="purchase_all_of_the_above">Purchase all of the above!</string>
    <string name="ultimate_pack">Ultimate Pack</string>
    <string name="crown">crown</string>
    <string name="kings_twist">Kings Twist</string>

    <string-array name="missions">
        <item name="mission_1">Arm wrestle with the player next to your right , the loser drink a shot</item>
        <item name="mission_2">Flip the cup - try to flip an upside down cup from the edge of the table , if you lose fill your drink</item>
        <item name="mission_3">The Thumbs Game - choose a player to match against , the loser drink a shot</item>
        <item name="mission_4">Two truth and a lie - If the table is guessing right your lie you must drink a shot else all the table need to drink</item>
        <item name="mission_5">Blinking Battle - The first who blinks drinks!</item>
    </string-array>
</resources>