<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_start_background"
    tools:context=".activities.MainPageActivity">

    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSettings"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:icon="@drawable/ic_settings"
                app:iconGravity="textTop"
                app:iconPadding="0dp"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHowToPlay"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/how_to_play"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:icon="@drawable/ic_book"
                app:iconGravity="textTop"
                app:iconPadding="0dp"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPremium"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/premium"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:icon="@drawable/ic_crown"
                app:iconGravity="textTop"
                app:iconPadding="0dp"
                app:iconTint="@color/white" />

        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topPanel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/play_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_beer"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_below="@+id/lblAppTitle"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/lottie_big_beer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblPlayersListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie_beer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/play_reg"
            android:text="@string/playerListTitle"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtAddPlayerName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblPlayersListTitle"
            android:layout_marginHorizontal="75dp"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_player_name"

            android:theme="@style/MyTextInputLayout_overlay"
            app:endIconDrawable="@drawable/ic_add"
            app:endIconMode="custom">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
            android:id="@+id/scrollPlayerList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/edtAddPlayerName"
            android:layout_marginHorizontal="75dp"
            android:layout_marginTop="24dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/llPlayerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollPlayerList"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="24dp"
            android:fontFamily="@font/play_reg"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />


    </RelativeLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainPanel"
        android:layout_gravity="bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
</RelativeLayout>