<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001220"
    android:orientation="vertical"
    tools:context=".activities.GameActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/play_bold"
        android:text="@string/game_name"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_weight="9"
        android:backgroundTint="#2d3142"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:id="@+id/gameCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/play_reg"
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="12dp"
                android:background="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblCardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/play_reg"
                android:text="@string/ace"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCardSymbol"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginVertical="36dp"
                app:srcCompat="@drawable/ic_spades"
                />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/play_reg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />


</LinearLayout>